--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -8,6 +8,7 @@ html {
 .main-content {
   position: relative;
   top: 5.3125rem; /* To offset for fixed header. */
+  z-index: 0;
 }
 
 .center {
@@ -41,6 +42,7 @@ header {
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
+  z-index: 99;
 }
 
 header .content {
@@ -100,6 +102,7 @@ header .mobile {
 
   header .mobile li {
     padding: 0;
+
   }
 
   header .mobile .button {
@@ -109,6 +112,8 @@ header .mobile {
     color: white;
   }
 }
+
+
 
 /* Sign Up Section */
 
