--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -77,11 +77,23 @@ header .icon {
   padding-left: .75rem;
 }
 
+
+
 header .mobile {
   display: none;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 895px) {
+  nav li:last-child {
+    display: block;
+  }
+
+  header .content {
+    padding: 1rem 1rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
   header .desktop {
     display: none;
   }
@@ -176,11 +188,11 @@ header .mobile {
 }
 
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 600px) {
   #sign-up-section {
     align-items: center;
     justify-content: center;
-    height: 28rem;
+    height: 20rem;
   }
 
   #sign-up-cta {
@@ -404,14 +416,13 @@ header .mobile {
 
 /* Footer */
 
-footer  {
-  background-color: #9b9b9b;
-  padding: 1.5rem 2rem;
-}
+
 
 footer .content {
   color: white;
   display: flex;
+  background-color: #9b9b9b;
+  padding: 1.5rem 2rem;
   font-size: .75rem;
 }
 
